logistic regression n-gram neural network recurrent

--- a/src/n-gram.ipynb
+++ b/src/n-gram.ipynb
@@ -1,14 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import librairies"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sklearn\n",
     "from collections import Counter, defaultdict\n",
+    "import preprocessing.preprocessing as pp\n",
     "import math\n",
     "import random\n",
     "import re\n",
@@ -16,97 +24,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load datas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['Unnamed: 0', 'index', 'song', 'year', 'artist', 'genre', 'lyrics'], dtype='object')\n",
-      "<bound method NDFrame.head of         Unnamed: 0   index                         song  year  \\\n",
-      "0                0       0                    ego-remix  2009   \n",
-      "1                1       1                 then-tell-me  2009   \n",
-      "2                2       2                      honesty  2009   \n",
-      "3                3       3              you-are-my-rock  2009   \n",
-      "4                4       4                black-culture  2009   \n",
-      "...            ...     ...                          ...   ...   \n",
-      "218205      362232  362232    who-am-i-drinking-tonight  2012   \n",
-      "218206      362233  362233                         liar  2012   \n",
-      "218207      362234  362234                  last-supper  2012   \n",
-      "218208      362235  362235  christ-alone-live-in-studio  2012   \n",
-      "218209      362236  362236                         amen  2012   \n",
+      "                                                   lyrics    genre\n",
+      "0       Oh baby how you doing You know I'm gonna cut r...      Pop\n",
+      "1       playin everything so easy it's like you seem s...      Pop\n",
+      "2       If you search For tenderness It isn't hard to ...      Pop\n",
+      "3       Oh oh oh I oh oh oh I If I wrote a book about ...      Pop\n",
+      "4       Party the people the people the party it's pop...      Pop\n",
+      "...                                                   ...      ...\n",
+      "218205  I gotta say Boy after only just a couple of da...  Country\n",
+      "218206  I helped you find her diamond ring You made me...  Country\n",
+      "218207  Look at the couple in the corner booth Looks a...  Country\n",
+      "218208  When I fly off this mortal earth And I'm measu...  Country\n",
+      "218209  I heard from a friend of a friend of a friend ...  Country\n",
       "\n",
-      "                 artist    genre  \\\n",
-      "0       beyonce-knowles      Pop   \n",
-      "1       beyonce-knowles      Pop   \n",
-      "2       beyonce-knowles      Pop   \n",
-      "3       beyonce-knowles      Pop   \n",
-      "4       beyonce-knowles      Pop   \n",
-      "...                 ...      ...   \n",
-      "218205       edens-edge  Country   \n",
-      "218206       edens-edge  Country   \n",
-      "218207       edens-edge  Country   \n",
-      "218208       edens-edge  Country   \n",
-      "218209       edens-edge  Country   \n",
-      "\n",
-      "                                                   lyrics  \n",
-      "0       Oh baby how you doing You know I'm gonna cut r...  \n",
-      "1       playin everything so easy it's like you seem s...  \n",
-      "2       If you search For tenderness It isn't hard to ...  \n",
-      "3       Oh oh oh I oh oh oh I If I wrote a book about ...  \n",
-      "4       Party the people the people the party it's pop...  \n",
-      "...                                                   ...  \n",
-      "218205  I gotta say Boy after only just a couple of da...  \n",
-      "218206  I helped you find her diamond ring You made me...  \n",
-      "218207  Look at the couple in the corner booth Looks a...  \n",
-      "218208  When I fly off this mortal earth And I'm measu...  \n",
-      "218209  I heard from a friend of a friend of a friend ...  \n",
-      "\n",
-      "[218209 rows x 7 columns]>\n"
+      "[218210 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data/english_cleaned_lyrics.csv')\n",
-    "\n",
-    "df = df.dropna()\n",
-    "df = df.drop_duplicates()\n",
+    "df = pp.load_data(\"english_cleaned_lyrics.csv\")\n",
+    "# df = pp.preprocess_data(df)\n",
+    "df = df[['lyrics', 'genre']]\n",
     "genres = df['genre'].unique()\n",
-    "print(df.columns)\n",
-    "print(df.head)"
+    "\n",
+    "print(df)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Pop', 'Hip-Hop', 'Rock', 'Metal', 'Other', 'Country', 'Jazz',\n",
-       "       'Electronic', 'Folk', 'R&B', 'Indie'], dtype=object)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df['genre'].unique()"
+    "# Create 3-gram for each music genre"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess_text(text):\n",
-    "    \n",
     "    text = text.lower()\n",
     "    text = re.sub(r'[^\\w\\s]', '', text)\n",
     "    return text\n",
@@ -147,15 +119,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example Pop"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "news for them ive got news for you who are you to keep a straight face and a brand new start you can laugh it off i can be your last day as a cocaine cowboy cowboy feat akon we the best dj khaled we global we the greatest lets go ayo joc got us akon konvict music this is survival used up and burnt out like an animal midnight coming for you tough im coming for you anyway so dont be blind to your game i feel some hesitation before we say goodnight take me in his arms dont even skip a beat wanna feel your body promise me the love that you dont like a big commotion im a demon for slow motion or such why should i care for you when i left your side but weve gotta go we got to keep the mystery to keep the home fires burning sure there are happy days and its not me talking you got me dizzy floating high up in the sky for the sacred in my winged water feathered river dirty rich soil strong and fertile the then shallow she earth as we know it lets really\n"
+      "dead she knelt she cried and she cried overnight cause what she is after when you find the ones i loved is like leaving the one they hate just come with me i like what i want ill do anything to have you back again so until then send me the blues i was a fool playing by the rules by the rules got nothing left holding my holding my breath feel like im losing my heart i can make you feel em bring your troubles well see if we can play it thug get it up gotta get outta here no i dont love you baby cant do ay ay ay ay ay ay its my party and ill fuck who i want to breathe about but safe to say that anybodys keepin score but you gotta come to terms oh its another day another time and place oh baby dont you cry let me see you know who you are yea this is how well be able to define the colors that you see more than you ever dreamed possible dont be afraid to touch i want it now i know what it feels like the change that\n"
      ]
     }
    ],
@@ -166,15 +145,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example Country"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "go told her i was just standin in line every heart has to do cause this feelin i keep feelin about you sue im gonna leave these blues behind for some other breed cause life aint about the money ill meet you in the eye where did you come from\n"
+      "for sinners such as i am or let me go dancing dancing ive seen life from both sides now from win and lose and still somehow its lifes illusions i recall i really dont know what it is and then one night as a time these tangled minds will all\n"
      ]
     }
    ],
@@ -185,15 +171,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example Rock"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "at his wife he says how and you say that you have ever done this is the sound of it another day in the same old dirt from up in heaven and you look like a woman like her can tease me with a feeling and she starts bawlin im\n"
+      "of those his head went back this far and now its all so cut and dried im all cut up sting like amphetamines and ready to rock in the storm there to ease the tension i got start it all over do it and i will never be alone and\n"
      ]
     }
    ],
@@ -204,53 +197,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "here to you i promise well start a little ponzi scheme whoaaaa oh oh lets take a 7 month staycation whoaaaa oh oh lets take a 7 month staycation whoaaaa oh oh now kiss me through my current occupation ill move these rocks trying to stack this cash on the\n"
-     ]
-    }
-   ],
    "source": [
-    "genre_to_generate = 'R&B'\n",
-    "new_lyrics = generate_lyrics(genre_models[genre_to_generate], ngram_size)\n",
-    "print(new_lyrics)"
+    "# Example Metal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the way up to the skies but their attempts at love were only imitations of my old flame i cant even think of his name but its funny now and then it happened to me and although hes nothing in the end my tears give me away without you dear\n"
-     ]
-    }
-   ],
-   "source": [
-    "genre_to_generate = 'Jazz'\n",
-    "new_lyrics = generate_lyrics(genre_models[genre_to_generate], ngram_size)\n",
-    "print(new_lyrics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hand was only a fiction and my creation\n"
+      "at the evil that men do lives on and on burning the sky slumped like a headless scarecrow cold and limp against the wall stand up or die while theres still time cause soon its gone so pale and pure hear the stories of friends i never knew i could feel this way but its hard to ignore when your hand reaches out i abandon you begging for more tickling in their ears the fear is gone we seem to fill up the emptiness within the emptiness be gone oh yielding evidence of greed safe now in the heart of the mountain made of skulls of my enemies let the sea run red with the blood of the innocent denegrates humanitys existance when education and peaceful protest cant bring their liberation the strategy for their rescue changes into militant intervention every action has an impact every life saved is a victory were burning out were fading away a picture is all that remains is still only the pain as present to know the feeling the loss of memory oh my wintertime and a longing for the reason to live for look now who is she sleepin with its a story\n"
      ]
     }
    ],
@@ -261,8 +223,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Having mean and std to generate accurate lyrics"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,8 +240,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate 1000 songs per genre"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
